--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 myroot/*
 report.html
 godepsautoupdate
+bin/*
+.vscode/settings.json
+godepsautoupdate.code-workspace
+pkg/*
+src/github.com/rogpeppe/godef/
+src/github.com/sqs/goreturns/
+src/github.com/stamblerre/gocode/
+src/github.com/ramya-rao-a/go-outline/
+src/github.com/pkg/errors/
+src/github.com/mdempsky/gocode/
+src/github.com/karrick/godirwalk/
+src/github.com/acroca/go-symbols/
+src/github.com/uudashr/gopkgs/
+src/golang.org/x/lint/
+src/golang.org/x/tools/
